# security-shift-intake

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  EVAL_REPORT.md  LICENSE  Makefile  PLANO_MESTRE_V2.0.md  PROJECT_SPEC.md  README.md  THIRD_PARTY_NOTICES.md  for_codex.md  progress.md  pyproject.toml
.github/workflows/: ci.yml
assets/fonts/: FONTS.md  README.md
configs/: controle_ocorrencias.yaml  htmicron_security.yaml
data/: __init__.py  tier_c_contract.py
data/generators/: __init__.py  canvas.py  degrade.py  fonts.py  messiness.py  messiness_table.py  occurrence_priors.py  occurrences.py  priors.py  records.py  render.py  surface_ops.py  tier_a.py  tier_b.py  tier_c.py
data/manifests/: tier_c_v1_bench_balanced_test.jsonl  tier_c_v1_bench_operational_test.jsonl
docs/: ADR_controle_ocorrencias_schema.md  ARCHITECTURE.md  AUDITORIA_FOLHAS_REAIS.md  CURADORIA_FORMATO.md  DATASET_CONTRACT.md  EVAL_BRESSAY.md  EVAL_PROTOCOL.md  EVAL_RELEASE.md  PRIVACY.md  READER_DECISION.md  ROADMAP.md  STATUS_PR1.md  STATUS_TIER_C.md  eval_bressay_baseline.json  eval_g1s_calibration.json  eval_paddle_bakeoff_val.json  eval_real_summary.json  eval_synthetic_summary.json
docs/archive/: SSI-1002_EVIDENCE.md  STATUS_PR1.md  STATUS_TIER_C.md  for_codex.md
docs/evals/: catalog.json
evals/: __init__.py  eval_classification.py  eval_extraction_real.py  eval_extraction_synthetic.py  eval_htr_bressay.py  eval_routing.py  eval_transcription.py  metrics.py  run_eval.py
evals/readers/: __init__.py  factory.py  local_vlm.py  settings.py
samples/: README.md
scripts/: __init__.py  browser_smoke.py  build_bressay_manifest.py  build_showcase_gif.py  check_real_data.py  demo_pipeline.py  demo_pipeline_mock.py  demo_transcribe.py  evidence_report.py  freeze_tier_c_manifest.py  g1s_verdict.py  gen_data.py  gen_pdfs.py  gen_sheets.py  preflight.py  preflight.sh  privacy_check.py  publish_eval_evidence.py  purge_demo_data.py  run_watch.py  serve.py  showcase_demo.py  validate_config.py
skills/config-schema-authoring/: SKILL.md
skills/eval-harness/: SKILL.md
skills/human-approval-gate/: SKILL.md
skills/security-shift-intake-patterns/: SKILL.md
skills/synthetic-data-generation/: SKILL.md
skills/vlm-document-extraction/: SKILL.md
src/: __init__.py  intake_watch.py  orchestrator.py  paths.py
src/api/: __init__.py  app.py  asgi.py  db.py  forms.py  gate.py  models.py  page_images.py  repository.py
src/classifier/: __init__.py  contracts.py  model.py  rules.py
src/clients/: __init__.py  anthropic_llm.py  anthropic_vision.py  base.py  factory.py  local_ocr.py  local_rules.py  local_vlm.py  mock.py  paddle_ocr.py  settings.py  table_rules.py
src/pipeline/: __init__.py  classify.py  draft.py  (+11 more)
templates/: controle_ocorrencias.j2  security_shift.j2
tests/: test_anthropic_llm.py  test_anthropic_vision.py  test_api.py  test_app_config.py  test_app_import.py  test_approve_gate.py  test_browser_smoke_seed.py  test_build_bressay_manifest.py  test_ci_hardening.py  test_classifier.py  test_classifier_rules.py  test_classify.py  test_clients.py  test_db_policy.py  test_degrade.py  test_degrade_photo.py  test_demo_pipeline.py  test_demo_pipeline_mock.py  test_dependency_policy.py  test_docs_archive.py  test_draft.py  test_edit_review.py  test_eval_artifact_catalog.py  test_eval_bressay.py  test_eval_extraction_real.py  test_eval_synthetic.py  test_eval_transcription_routing.py  test_evidence_bbox.py  test_evidence_report.py  test_experimental_scope_docs.py  test_export_csv.py  test_external_guards.py  test_extract.py  test_extract_table.py  test_fonts.py  test_fonts_coverage.py  test_freeze_tier_c_manifest.py  test_g1s_verdict.py  test_gate.py  test_health.py  (+62 more)
(+17 files in other folders)
